<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <TextView
        android:id="@+id/txtStockCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:text="@string/stock_code"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/edtStockCode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/txtStockCode"
        android:ems="10"
        android:hint="@string/stock_code_hint"
        android:inputType="number" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/txtStockName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/edtStockCode"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/stock_name" />

    <TextView
        android:id="@+id/txtSelectedStockName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/txtStockName"
        android:layout_alignParentRight="true"
        android:gravity="right"
        android:text="@string/none" />

    <TextView
        android:id="@+id/txtLastPos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/txtStockName"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/last_position" />

    <TextView
        android:id="@+id/txtSelectedStockLastPos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/txtLastPos"
        android:layout_alignParentRight="true"
        android:gravity="right"
        android:text="@string/none" />

    <TextView
        android:id="@+id/txtHighLow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/txtLastPos"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/high_low" />

    <TextView
        android:id="@+id/txtSelectedStockHighLow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/txtHighLow"
        android:layout_alignParentRight="true"
        android:gravity="right"
        android:text="@string/none" />

    <TextView
        android:id="@+id/txBoardLotSize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/txtHighLow"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/board_lot_size" />

    <TextView
        android:id="@+id/txtSelectedStockBoardLotSize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/txBoardLotSize"
        android:layout_alignParentRight="true"
        android:gravity="right"
        android:text="@string/none" />

    <TextView
        android:id="@+id/txtBuyingLot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/txBoardLotSize"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/buying_lot"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/edtBuyingLot"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/txtBuyingLot"
        android:ems="10"
        android:hint="@string/buying_lot_hint"
        android:inputType="number" />

    <TextView
        android:id="@+id/txtRequiredFeeToBuy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/edtBuyingLot"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/required_fee_to_buy" />

    <TextView
        android:id="@+id/txtRequiredFeeToBuyValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/txtRequiredFeeToBuy"
        android:layout_alignParentRight="true"
        android:gravity="right"
        android:text="@string/none" />

    <Button
        android:id="@+id/btnBuyCheckout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:text="@string/buy" />

    <Button
        android:id="@+id/btnBuyBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:text="@string/back" />

</RelativeLayout>
